PRD-4483 Fix return code handler for PDF failure in Unix only.